# graphbrain-semsim-thesis

./: .gitignore
code/: pyproject.toml
code/graphbrain_semsim/: __init__.py  _base_config.py  models.py  utils.py
code/graphbrain_semsim/case_studies/: config.py  evaluate_pattern.py  models.py  pattern_making.py  run_case_study.py
code/graphbrain_semsim/case_studies/conflicts/: config.py  make_pattern.py  pattern_configs.py
code/graphbrain_semsim/datasets/: config.py  dataset_table.py  evaluate_dataset.py  get_annotations.py  make_dataset.py  models.py  run_eval_configs.py  utils.py
code/graphbrain_semsim/eval_tools/: compare_evaluations.py  ref_edges_table.py  result_table.py
code/graphbrain_semsim/eval_tools/result_data/: dataset_evals.py  pattern_eval_runs.py
code/graphbrain_semsim/eval_tools/sample_tables/: latex_table.txt  sample_table.py  table_data.json
code/graphbrain_semsim/eval_tools/utils/: embeddings.py  lemmas.py  pretty_names.py
code/graphbrain_semsim/notebooks/: kuznet_abstract_classifiers.ipynb  model_exploration.ipynb  result_exploration.ipynb
code/graphbrain_semsim/playgrounds/: breakpoint_discovery.py  dataset_exploration.py  parsing.py  playground.py  post_processing.py  result_inspection.py
code/graphbrain_semsim/plots/: __init__.py  _base_config.py  plot_dataset_evaluation.py  plot_dataset_lemma_distribution.py  plot_dataset_n_ref_edges.py
code/graphbrain_semsim/utils/: file_handling.py  general.py  hypergraph.py
code/graphbrain_semsim/utils/scripts/: copy-results.sh  (+1 more)
code/supervisor_config/: run_script.conf  update_conf.sh
(+22 files in other folders)
